--- a/index.html
+++ b/index.html
@@ -7,10 +7,28 @@
     <title>Loteria simulator</title>
 </head>
 <body>
-    <h1>loteria</h1>
-    <h3>loteria simulator</h3>
+    <header>
+        <h1>loteria</h1>
+        <h3>loteria simulator</h3>
+    </header>
 
+    <div class="numeros">
+        <input type="number" id="num1">
+        <input type="number" id="num2">
+        <input type="number" id="num3">
+        <input type="number" id="num4">
+        <input type="number" id="num5">
+        <input type="number" id="num6">
+    </div>
 
+    <div class="sorteio">
+        <button class="btnsort">sortear</button>
+        <p id="numsort"></p>
+    </div>
 
+    <div class="verifacao">
+        <p>total de acertos foi de: <span id="total"></span> </p>
+
+    </div>
 </body>
 </html>
