--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
     </div>
 
     <div class="sorteio">
-        <button class="btnsort">sortear</button>
-        <p id="numsort"></p>
+        <button class="btnsort" onclick = "sorteioNum()">sortear</button>
+        <p id="numsort">.</p>
     </div>
 
-    <div class="verifacao">
+    <div class="verificacao">
         <p>total de acertos foi de: <span id="total"></span> </p>
 
     </div>
+
+    <script src="funcoes.js"></script>
 </body>
 </html>
